<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@drawable/backdesign"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:src="@drawable/logo"
        android:paddingTop="15dp"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/signin"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            ></TextView>
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/useremail">
        </EditText>
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userpassword"
            android:inputType="textPassword">
        </EditText>
        <Button
            android:id="@+id/login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@color/signin"
            android:text="@string/signin_botton"
            android:textColor="@color/signin_button"
            android:textSize="20dp"

            android:textStyle="bold">
        </Button>
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColourBlack"
            android:layout_gravity="center_horizontal"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/donthaveaccount"
            android:textAlignment="center"></TextView>
        <TextView
            android:clickable="true"
            android:onClick="signUp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/signin"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/signupnow"
            android:textAlignment="center"></TextView>
    </LinearLayout>

</LinearLayout>