<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity"
    android:orientation="vertical"
    android:background="@color/dashboardBackground">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/signin"
        android:id="@+id/TopDesign">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboardMainTitle"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_gravity="center"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/underMainTitile"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"/>
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/TopDesign">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

        <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/design"
        android:orientation="vertical"
        android:layout_below="@id/TopDesign"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/signin_button"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/signin_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/description"></TextView>
        </LinearLayout>

            <LinearLayout
                android:id="@+id/second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/design"
                android:orientation="vertical"
                android:layout_below="@id/first"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="-10dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Instructions"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/signin_button"></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/signin_button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/inst1"></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/signin_button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/inst2"></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/signin_button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/inst3"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/design"
                    android:layout_marginRight="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/ic_star"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/signin_button"
                        android:text="@string/service"
                        android:textAlignment="center"
                        android:textStyle="bold"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/design"
                    android:layout_marginRight="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/ic_access_time"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/signin_button"
                        android:text="@string/call"
                        android:textAlignment="center"
                        android:textStyle="bold"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/design"
                    android:layout_marginRight="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/ic_import_contacts"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/signin_button"
                        android:text="@string/reports"
                        android:textAlignment="center"
                        android:textStyle="bold"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fourth"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/design"
                android:orientation="vertical"
                android:layout_below="@id/third"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/signin_button"></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/signin_button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/setting1"></TextView>
            </LinearLayout>

        </TableLayout>

    </ScrollView>

</RelativeLayout>