<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentsActivity"
    android:orientation="vertical"
    android:background="@color/dashboardBackground">
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/signin"
        android:id="@+id/TopDesign">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboardMainTitle"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_gravity="center"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/underMainTitile"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"/>
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/TopDesign">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/content"
                android:layout_margin="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/signin"
                    android:text="@string/Name">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/appName"></EditText>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/selectDoctor"
                    android:textColor="@color/signin">
                </TextView>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/selectDoctor"
                    android:textAlignment="center"
                    ></Spinner>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/signin"
                    android:text="@string/dateBooked">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/appDate"></EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp">
                    <Button
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:background="@color/signin"
                        android:text="@string/BookAppointments"
                        android:textAllCaps="false"
                        android:textColor="@color/signin_button"
                        android:textStyle="bold"
                        android:id="@+id/btnBookApmt"
                        android:elevation="10dp"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"></Button>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/design"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/signin_button"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:text="@string/appointmentDescription"></TextView>
            </LinearLayout>

            </LinearLayout>

        </TableLayout>
    </ScrollView>
</RelativeLayout>