<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorsActivity"
    android:orientation="vertical"
    android:background="@color/dashboardBackground">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/signin"
        android:id="@+id/TopDesign">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboardMainTitle"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_gravity="center"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/underMainTitile"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/TopDesign"
        android:id="@+id/nameTag"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="-10dp"
            android:text="@string/MyAppointments"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/signin"></TextView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="20dp"
        android:layout_below="@id/nameTag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/appointmentDetailsRecycler"
        android:orientation="vertical">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>